# fire-physics-engine

./: .gitignore  README.md  demo.mojo  demo2.mojo  demo_refactor.mojo  main_struct.mojo  mojoproject.toml  player_demo.mojo  sdl_demo_2.mojo
raylib_bindings/: CMakeLists.txt  bindings.c  bindings.h
src/: __init__.mojo
src/engine/: __init__.mojo  arbiter.mojo  arbiterkey.mojo  body.mojo  collide.mojo  collision.mojo  joint.mojo  world.mojo
src/engine_utils/: MathUtils.mojo  __init__.mojo  camera.mojo  raylib_map.mojo
tests/: array_ownership_test.mojo  functiion array.mojo  joint_tests.mojo  rendering_test.mojo  vec_test.mojo
